force-app/main/default/objects/Opportunity/fields/Main_Spec__c.field-meta.xml
<CustomField>
    <fullName>Main_Spec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Spec</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>