force-app/main/default/objects/Opportunity/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Realm</label>
    <referenceTo>Realm__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>